GNOME Bugzilla – Bug 748024
icydemux: Fix segfault for 0-value metainterval
Last modified: 2015-04-17 09:23:53 UTC
Prevents an extra unref of GstBuffer when passing a non-icy stream through icydemux with metadata-interval set to 0. Reproducible with: gst-launch-1.0 filesrc location=~/testsong.mp3 ! 'application/x-icy,metadata-interval=(int)0' ! icydemux ! decodebin ! wavenc ! filesink location=~/testsong.wav
Created attachment 301788 [details] [review] prepared commit
It looks like this bug goes back to the original commit of icydemux.
Thanks for the patch, pushed: commit fc038f1f4e45c5c3eb9ba8261c4e0210dd125821 Author: Alex O'Konski <alexanderokonski@gmail.com> Date: Fri Apr 17 06:51:46 2015 +0000 icydemux: Fix segfault if metadata-interval is 0 Prevents an extra unref of GstBuffer when passing a non-icy stream through icydemux with metadata-interval set to 0. Reproducible with: gst-launch-1.0 filesrc location=~/testsong.mp3 ! \ 'application/x-icy,metadata-interval=(int)0' ! icydemux ! decodebin ! wavenc ! \ filesink location=~/testsong.wav https://bugzilla.gnome.org/show_bug.cgi?id=748024
Thanks for the quick review!